--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.link-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
+  background-size: 0 2px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 250ms ease-in-out;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.link-underline-black {
+  background-image: linear-gradient(transparent, transparent), linear-gradient(#3d4335, #3d4335);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.link-underline:hover {
+  background-size: 100% 2px;
+  background-position: 0 100%;
+  color: #d5ddcb;
+}
+
+.fade-in-text1 {
+  animation: fadeIn1 3s;
+  -webkit-animation: fadeIn1 3s;
+  -moz-animation: fadeIn1 3s;
+  -o-animation: fadeIn1 3s;
+  -ms-animation: fadeIn1 3s;
+}
+
+.fade-in-text2 {
+  animation: fadeIn2 6s;
+  -webkit-animation: fadeIn2 6s;
+  -moz-animation: fadeIn2 6s;
+  -o-animation: fadeIn2 6s;
+  -ms-animation: fadeIn2 6s;
+}
+
+.fade-in-text3 {
+  animation: fadeIn3 5s;
+  -webkit-animation: fadeIn3 5s;
+  -moz-animation: fadeIn3 5s;
+  -o-animation: fadeIn3 5s;
+  -ms-animation: fadeIn3 5s;
+}
+
+@keyframes fadeIn1 {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  33% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
+
+@keyframes fadeIn2 {
+  0% {
+      opacity: 0;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn3 {
+  0% {
+      opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+// #heroImg {
+//   animation: fadeIn 6s;
+// }
+
+// @keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//   }
+// }
+
