--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+#map {
+  filter: grayscale(1) contrast(1.2) opacity(0.30);
+}
+
 .link-underline {
   border-bottom-width: 0;
   background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
@@ -82,45 +86,45 @@
 
 
 
-@-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+// @-moz-keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+// @-webkit-keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-@-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+// @-o-keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+// @-ms-keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
 // #heroImg {
 //   animation: fadeIn 6s;
