--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,18 @@
   outline: none;
 }
 
+* {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+Popover {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+Popover.Panel {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 #map {
   filter: grayscale(1) contrast(1.2) opacity(0.30);
 }
